syntax = "proto3";

package Foo;

service FooService
{
    rpc Sleep (SleepRequest) returns (SleepReply) {}
}

message SleepRequest
{
    int32 seconds = 1;
}

message SleepReply
{
    int32 reply = 1;
}